# OOP-Landlord-Game

./: CMakeLists.txt  README.md  calllandlordthread.cpp  calllandlordthread.h  card.cpp  card.h  cardgroups.cpp  cardgroups.h  cardwidget.cpp  cardwidget.h  gamecontrol.cpp  gamecontrol.h  gamewindow.cpp  gamewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mypushbutton.cpp  mypushbutton.h  player.cpp  player.h  playhandthread.cpp  playhandthread.h  robot.cpp  robot.h  strategy.cpp  strategy.h  user.cpp  user.h
